--- a/thanks.html
+++ b/thanks.html
@@ -71,7 +71,7 @@
         <div><img src="img/lead-logo.png" style="width: 40%;"></div>
         <h2 style="color: #000; font-weight: 300; margin-top: 3rem;"> Thanks for Registering on Futureskills Hackathon</h2>
         <p style="font-weight: 300; font-size: 14px; color: #000;">Shortly you'll receive an Email from us.</p>
-        <p><a href="index.html"  style="color: #737afb;text-decoration: underline;">Return to Previous Page</a></p>
+        <p><a href="index.html"  style="color: #0098f6;text-decoration: underline;">Return to Previous Page</a></p>
       </div>
     </header>
 
