--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@ Change below Image ############-->
           <div class="row">
               <h2>Hackathon Jury | <span>Judges</span> <span>Panel</span></h2>
               <div class="col-sm-4">
-                <img>
+                <img src="">
                 <h4></h4>
+                <p></p>
               </div>
           </div>
         </div>
