--- a/index.html
+++ b/index.html
@@ -122,18 +122,10 @@ Change below Image ############-->
     <!-- Main Sponser Logo -->
     <section class="sponser" id="sponser">
       <div class="container">
-        <!-- ############################# 
-        ##################################
-        ################################## 
-        ################################## 
-        Change below Image ############-->
-          <img src="img/Vector Smart Object-1.png">
-        <!-- ############################# 
-        ##################################
-        ################################## 
-        ################################## 
-        Change below Image ############-->
-          <img src="img/Vector Smart Object-2.png" style="float: right;">
+          <img src="img/1.png">
+          <img src="img/2.png">
+          <img src="img/3.png">
+          <img src="img/4.png">
       </div>
     </section>
 
@@ -228,13 +220,12 @@ Change below Image ############-->
             <img src="img/prizes.png" >
           </div>
           <div class="col-sm-9">
-              <h1>Prizes for the top winners under different categories: <br><br>
+              <h1>Prizes are distributed among the winners worth <br><br>
                 <span>
-                  1st Prize -  ₹1,00,000<br>
-                  1st Runner up - ₹50,000<br>
-                  2nd Runner up - ₹25,000
+                  INR 1.75 Lakhs+
                 </span>
               </h1>
+              <p style="text-align: left;">Winning is contingent upon complying with all the terms and conditions and fulfilling all requirements contained in these official rules.</p>
           </div>
         </div>
       </div>
@@ -290,12 +281,7 @@ Change below Image ############-->
                   <li>
                     <img src="img/evc.png" style="height: 80px; margin-bottom: 10px;">
                     <h4 style="display: inline"><a target="_blank" href="evc.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
-                    <!-- ############################# 
-                    ##################################
-                    ################################## 
-                    ################################## 
-                    Change below Content ############-->
-                    <p>We want to revolutionize the way education is imparted by using voice technologies. How can the AI of Amazon Alexa be leverage to build engaging skills to make learning a fun experience for students from Kindergarten to Professional courses? The skill built on Amazon Alexa should work as a ‘Virtual Teacher’ and help students with everyday activities involved during their student years like searching for content, curriculum management, personal evaluation, subject wise coaching, and more.</p>
+                    <p>Personalised health monitering - Smart watches and other wearable devices have made health telemetry a reality. But machine learning is taking things one step future, allowing doctors and relaties to moniter the health of elderly family member. The more personal data these algorithms are fed, the better they understand a user’s profile, enabling healtcare professionals to spot potential anomalies earlier on. Build model for personalized health profile and monitering.</p>
                   </li>
                 </ol>
               </div>
@@ -306,12 +292,17 @@ Change below Image ############-->
     <!-- Jury Section -->
     <section class="jury" id="jury">
         <div class="container">
+          <h2>Hackathon Jury | <span>Judges</span> <span>Panel</span></h2>
           <div class="row">
-              <h2>Hackathon Jury | <span>Judges</span> <span>Panel</span></h2>
               <div class="col-sm-4">
-                <img src="">
-                <h4></h4>
-                <p></p>
+                <img src="img/j2.jpeg">
+                <h4>Nitin Sethi</h4>
+                <p>Vice President Digital at Indigo Airlines</p>
+              </div>
+              <div class="col-sm-offset-2 col-sm-4">
+                <img src="img/j1.jpeg">
+                <h4>Vijetha Shastry</h4>
+                <p>Lead - Open Innovation at NASSCOM Center of Excellence - IoT</p>
               </div>
           </div>
         </div>
