Changes Problem Statement

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="Siddhant S Goral">
     <meta name="author" content="IncubateIND">
+    <meta name="author" content="Rajasthan Technical University Hackathon">
     <meta name="description" content="Arya College of Engineering &amp; I. T, Jaipur was established in the year
     2000 with the aim of imparting education with the best quality
     standards in an effective manner through optimum utilization of the
@@ -18,7 +19,7 @@
     curriculum. The college also believes in creating an academic
     environment that boasts of rigorous work culture with excellent
     teaching system.">
-    <meta name="keywords" content="Arya, IncubateIND, Jaipur, codeforindia, hackathon, Coding, RTU, Rajasthan Technical University">
+    <meta name="keywords" content="Rajasthan Technical University Hackathon, Arya, IncubateIND, Jaipur, codeforindia, hackathon, Coding, RTU, Rajasthan Technical University">
 
     <meta property="og:site_name" content="Rajasthan Technical University Hackathon, RTU hackathon " />
     <meta property="og:title" content="RTU Hacathon" />
@@ -212,11 +213,6 @@ Change below Image ############-->
       <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            <!-- ############################# 
-            ##################################
-            ################################## 
-            ################################## 
-            Change below Image ############-->
             <img src="img/prizes.png" >
           </div>
           <div class="col-sm-9">
@@ -246,18 +242,6 @@ Change below Image ############-->
                     <p>We would like to craft personalized travel experience for 5.2mn passengers who travel with us monthly, by rapidly making meaningful changes to PaxEx across touchpoints. How can AI and Big Data help IndiGo, the leading low-cost carrier, create ‘one in a million experience’ for every single customer? Also, accelerate personalized ancillary upsell throughout the travel journey of its leisure and business travellers?</p>
                   </li>
                   <li>
-                    <img src="img/amazonalexa.png" style="height: 80px; margin-bottom: 10px;">
-                    <h4 style="display: inline"><a target="_blank" href="amazonalexa.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
-                    <p>We want to revolutionize the way education is imparted by using voice technologies. How can the AI of Amazon Alexa be leverage to build engaging skills to make learning a fun experience for students from Kindergarten to Professional courses? The skill built on Amazon Alexa should work as a ‘Virtual Teacher’ and help students with everyday activities involved during their student years like searching for content, curriculum management, personal evaluation, subject wise coaching, and more.</p>
-                  </li>
-                  <li>
-                    <img src="img/aeris.png" style="width: 150px; margin-bottom: 10px;">
-                    <h4 style="display: inline"><a target="_blank" href="aeris.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
-                    <p>Closed loop irrigation solution for farmers:<br>
-                      Irrigating fields plays a vital role in crop yield. However, how much and when to irrigate is still moderated by the traditional knowledge for the farmers. Knowing how much water is actually required for a given crop for a particular soil type depends majorly on soil’s capacity to hold moisture. We need an IoT, AI based solution which can auto irrigate the fields for a given crop based on the soil moisture content.
-                      </p>
-                  </li>
-                  <li>
                     <img src="img/nobroker.png" style="height: 80px; margin-bottom: 10px;">
                     <h4 style="display: inline"><a target="_blank" href="nobroker.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
                     <p>
@@ -279,10 +263,23 @@ Change below Image ############-->
                     </p>
                   </li>
                   <li>
+                    <img src="img/amazonalexa.png" style="height: 80px; margin-bottom: 10px;">
+                    <h4 style="display: inline"><a target="_blank" href="alexa.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
+                    <p>We want to revolutionize the way education is imparted by using voice technologies. How can the AI of Amazon Alexa be leverage to build engaging skills to make learning a fun experience for students from Kindergarten to Professional courses? The skill built on Amazon Alexa should work as a ‘Virtual Teacher’ and help students with everyday activities involved during their student years like searching for content, curriculum management, personal evaluation, subject wise coaching, and more.</p>
+                  </li>
+                  <li>
                     <img src="img/evc.png" style="height: 80px; margin-bottom: 10px;">
                     <h4 style="display: inline"><a target="_blank" href="evc.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
                     <p>Personalised health monitering - Smart watches and other wearable devices have made health telemetry a reality. But machine learning is taking things one step future, allowing doctors and relaties to moniter the health of elderly family member. The more personal data these algorithms are fed, the better they understand a user’s profile, enabling healtcare professionals to spot potential anomalies earlier on. Build model for personalized health profile and monitering.</p>
                   </li>
+                  <li>
+                    <img src="img/aeris.png" style="width: 150px; margin-bottom: 10px;">
+                    <h4 style="display: inline"><a target="_blank" href="aeris.pdf"><img src="img/download.svg"><span>Download it</span></a></h4> 
+                    <p>Closed loop irrigation solution for farmers:<br>
+                      Irrigating fields plays a vital role in crop yield. However, how much and when to irrigate is still moderated by the traditional knowledge for the farmers. Knowing how much water is actually required for a given crop for a particular soil type depends majorly on soil’s capacity to hold moisture. We need an IoT, AI based solution which can auto irrigate the fields for a given crop based on the soil moisture content.
+                      </p>
+                  </li>
+                 
                 </ol>
               </div>
             </div>
