--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="keywords" content="Rajasthan Technical University Hackathon, Arya, IncubateIND, Jaipur, codeforindia, hackathon, Coding, RTU, Rajasthan Technical University">
 
     <meta property="og:site_name" content="Rajasthan Technical University Hackathon, RTU hackathon " />
-    <meta property="og:title" content="RTU Hacathon" />
+    <meta property="og:title" content="RTU Hackathon" />
     <meta property="og:description" content="Arya College of Engineering &amp; I. T, Jaipur was established in the year
     2000 with the aim of imparting education with the best quality
     standards in an effective manner through optimum utilization of the
@@ -34,7 +34,7 @@
     environment that boasts of rigorous work culture with excellent
     teaching system."/>
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://incubateind.com/rtu/img/INSTA-FSH.jpg">
+    <meta property="og:image" content="https://incubateind.com/rtu/img/meta.jpg">
     <meta property="og:url" content="https://incubateind.com/rtu/" />
 
     <!-- Favicon -->
@@ -72,7 +72,7 @@
 ################################## 
 ################################## 
 Change below Image ############-->
-<img src="/img/INSTA-FSH.jpg" style="width: 0; height: 0;"> 
+<img src="/img/meta.jpg" style="width: 0; height: 0;"> 
 
 <!-- Master Cover -->
 <div class="content">
@@ -134,7 +134,7 @@ Change below Image ############-->
     </section>
 
     <!-- Bottom Mobile Register Button Fix -->
-    <div class="fix-register-btn-mob centered">
+    <div class="fix-register-btn-mob centered" style="box-shadow: 5px 5px 10px #000;">
       <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://incubateindia.typeform.com/to/YkfnuZ" data-mode="popup" data-hide-headers=true data-hide-footer=true data-submit-close-delay="5" target="_blank">Register Here</a> 
     </div>
 
@@ -280,12 +280,12 @@ Change below Image ############-->
               <div class="col-sm-4">
                 <img src="img/j2.jpeg">
                 <h4>Nitin Sethi</h4>
-                <p>Vice President Digital at Indigo Airlines</p>
+                <p>Vice President Digital - Indigo Airlines</p>
               </div>
               <div class=" col-sm-4">
                 <img src="img/j1.jpeg">
                 <h4>Vijetha Shastry</h4>
-                <p>Lead - Open Innovation at NASSCOM Center of Excellence - IoT</p>
+                <p>Lead | Open Innovation - NASSCOM Center of Excellence (IOT)</p>
               </div>
               <div class=" col-sm-4">
                 <img src="img/j3.jpeg">
@@ -295,7 +295,7 @@ Change below Image ############-->
               <div class="col-sm-4 mx-auto">
                 <img src="img/j4.jpeg">
                 <h4>Harsha Kikkeri</h4>
-                <p>Holosuit</p>
+                <p>CoFounder - Holosuit</p>
               </div>
           </div>
         </div>
