--- a/index.html
+++ b/index.html
@@ -297,6 +297,26 @@ Change below Image ############-->
                 <h4>Harsha Kikkeri</h4>
                 <p>CoFounder - Holosuit</p>
               </div>
+              <div class="col-sm-4 mx-auto">
+                <img src="img/j5.jpg">
+                <h4>Rohit Manglik</h4>
+                <p>CEO, EduGorilla</p>
+              </div>
+              <div class="col-sm-4 mx-auto">
+                <img src="img/j6.jpeg">
+                <h4>Akshay Chaturvedi</h4>
+                <p>Co-Founder & CEO, LeverageEdu</p>
+              </div>
+              <div class="col-sm-4 mx-auto">
+                <img src="img/j7.jpeg">
+                <h4>Shivam Dikshit</h4>
+                <p>Co-Founder & Director (BD), IoTfy Inc.</p>
+              </div>
+              <div class="col-sm-4 mx-auto">
+                <img src="img/j8.jpeg">
+                <h4>Gaurav Kansal</h4>
+                <p>Founder & CEO DWOSA Automation</p>
+              </div>
           </div>
         </div>
       </section>
