--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ Change below Image ############-->
             <li class="nav-item">
                 <a class="nav-link rounded js-scroll-trigger" href="#jury">Jury</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item disable-temp">
                 <!-- <a class="nav-link rounded js-scroll-trigger register-now"  data-keyboard="true" data-toggle="modal" data-target="#regis">Register Now</a> -->
-                <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank">Register Here</a> 
+                <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank">Registration Closed</a> 
                 <!-- <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://incubateindia.typeform.com/to/YkfnuZ" data-mode="popup" data-hide-headers=true data-hide-footer=true data-submit-close-delay="5" target="_blank">Register Here</a> 
                 <script> 
                 (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() 
@@ -134,8 +134,8 @@ Change below Image ############-->
     </section>
 
     <!-- Bottom Mobile Register Button Fix -->
-    <div class="fix-register-btn-mob centered" style="box-shadow: 5px 5px 10px #000;">
-        <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank">Register Here</a> 
+    <div class="fix-register-btn-mob centered disable-temp" style="box-shadow: 5px 5px 10px #000;">
+        <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank">Registration Closed</a> 
       <!-- <a class="typeform-share button nav-link rounded js-scroll-trigger register-now" href="https://incubateindia.typeform.com/to/YkfnuZ" data-mode="popup" data-hide-headers=true data-hide-footer=true data-submit-close-delay="5" target="_blank">Register Here</a>  -->
     </div>
 
@@ -158,8 +158,8 @@ Change below Image ############-->
         <div class="row">
             <div class="col-sm-12">
               <h2>Rajasthan Technical University Hackathon</h2>
-              <button class="submit-bar" type="button">
-                  <a class="typeform-share button submit-bar typoform-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank"> Register Here </a> 
+              <button class="submit-bar  disable-temp" type="button">
+                  <a class="typeform-share button submit-bar typoform-btn disable-temp" href="https://docs.google.com/forms/d/e/1FAIpQLSeQUq58aKKE3n24WJKDs4rpYn_ZhvlQTr1voi4vpd2CbU6mkA/viewform?edit_requested=true" target="_blank"> Registration Closed </a> 
                   <!-- <a class="typeform-share button submit-bar typoform-btn" href="https://incubateindia.typeform.com/to/YkfnuZ" data-mode="popup" data-hide-headers=true data-hide-footer=true data-submit-close-delay="5" target="_blank">
                     Register Here
                   </a>  -->
